BUGFIX: collapsable menu

--- a/src/Components/Mural/Mural.scss
+++ b/src/Components/Mural/Mural.scss
@@ -1,3 +1,28 @@
-.works {
-  background-color: white;
+.murals {
+  background-color: rgb(0, 0, 0);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  .slidebar {
+    height: 400px;
+    display: flex;
+    position: absolute;
+    left: 0px;
+    .container {
+      width: 100vw;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      .item {
+        width: 700px;
+        height: 100%;
+        background-color: white;
+        border-radius: 20px;
+        display: flex;
+        align-items: center;
+      }
+    }
+  }
 }
